html/stylesheets/src/elements/_code.scss
pre.code{
  padding: 20px 40px;
  background: $c_main_highlight_bg;
  position: relative;
  margin: 0;
}

pre.code:before{
  @extend %font-icon;
  content: "\E025";
  color: #fff;
  background: $c_corporate_light;
  position: absolute;
  top: 0;
  left: 0;
  font-size: 1rem;
  width: 2rem;
  height: 2rem;
  line-height: 2;
  text-shadow: none;
}

pre.code code{
  background: none;
  padding: 0;
}

:not(pre) > code[class*="language-"],
.text code{
  background: $c_main_highlight_bg;
  padding: 0.2em 0.5em;
  white-space: normal;
}

@import "../../../javascripts/vendor/prism/prism.css";

